--- a/index.css
+++ b/index.css
@@ -1,7 +1,10 @@
 body{
-    background-color: black;
+    background-color: black
 }
 h1{
     color: blue;
+    text-align: center;
+}
+div{
     text-align: center;
 }
