Add css rule to align h3 headers to the right

--- a/index.css
+++ b/index.css
@@ -12,6 +12,7 @@ div{
 p{
     color: brown;
     font-size: x-large;
+    text-align: left;
 }
 span{
     color: blue;
@@ -28,4 +29,7 @@ strong{
 ul{
     color: violet;
     text-align: left;
+}
+h3{
+    text-align: right;
 }
